app/styles/views/dashboard/_unused-advisor.scss
.side-panel.unused-advisor {
  @include side-panel($scaled: true);

  .main > .content > header {
    @extend %grid-row;

    padding: $column-gutter $column-gutter / 2;
    width: 100%;

    > .content {
      @extend %grid-column-12;

      h1 {
        line-height: $interaction-header-title-height / 2;
        margin: 0;

        small {
          a {
            color: $small-font-color;
          }
        }
      }

      > span {
        display: block;
        line-height: $interaction-header-title-height / 2;

        > span {
          color: $secondary-color;
        }
      }
    }
  }

  .drawer {
    .preview {
      padding: $column-gutter / 2 $column-gutter;
    }

    .form-field {
      margin-bottom: $column-gutter / 2;
      min-height: rem-calc(90) !important;
    }

    .email-composer,
    .form,
    form {
      height: 100%;
    }

    form {
      background-color: $white;
      border-radius: 0;
      overflow: auto;
    }

    fieldset {
      height: 100%;
      margin-top: 0;
      padding: $column-gutter / 2 $column-gutter;
    }

    textarea {
      min-height: rem-calc(500) !important;
      resize: none;
    }

    pre {
      font-family: inherit;
      word-wrap: break-word;
    }

    .header {
      background-color: lighten($panel-bg, 2%);
      border-bottom: 1px solid darken($global-section-border-color, 10%);
      padding: $column-gutter / 2 $column-gutter;

      fieldset {
        padding: 0;
      }

      dl {
        margin-bottom: 0;

        dt {
          clear: both;
          float: left;
          margin-right: 5px;
        }
      }
    }
  }

  .profile {
    padding: 0 $column-gutter / 2;

    .front {
      @extend %panel-widget;
    }
  }

  .project-history {
    padding: $column-gutter;
  }

  .alert {
    @include alert($bg: $warning-color);

    border: 0;
    color: $small-font-color;
    font-size: $base-font-size;
    margin-bottom: 0;
    padding: $column-gutter / 4 $column-gutter;
  }
}

